tests/fixtures/invalid/bytes_bitand_bool.py
# Cannot bitwise AND Bytes and Bool
x: bytes = b"hello" & True
